# gfx

./: CMakeLists.txt
gfx/: color.h  font.cpp  font.h  painter.h  polygon.cpp  polygon.h  types.h  vec2.h
gfx/backend/opengl/: font_atlas.cpp  font_atlas.h  font_cache.cpp  font_cache.h  painter.cpp  painter.h  shader.cpp  shader.h  shader_source.h
src/: main.cpp
